<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen">

    <com.flaviofaria.kenburnsview.KenBurnsView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splash_image"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A5000000">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/appTitle"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/dg"
            android:textColor="#ffffff"
            android:textSize="48sp"
            android:fontFamily="@font/g_bold"/>

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_global"
            android:fontFamily="@font/g_bold"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="36sp"
            android:textColor="#ffffff"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/appTitle"
            android:fontFamily="@font/g_bold"
            android:textColor="#ffffff"
            android:textSize="36sp"/>

    </RelativeLayout>

</FrameLayout>