<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="20dp"
    android:id="@+id/cardView"
    app:cardElevation="5dp"
    app:cardCornerRadius="15dp">

    <ProgressBar
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:id="@+id/loader"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.flaviofaria.kenburnsview.KenBurnsView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/global_news"
            android:scaleType="centerCrop"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#8A000000"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:layout_above="@id/readMore"
            android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/tvSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/source"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_above="@id/tvTitle"/>

        <LinearLayout
            android:id="@+id/readMore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_more"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_margin="10dp"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="end"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>