<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GlobalNews">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/app_logo"
        android:scaleType="fitXY"
        android:contentDescription="@string/app_name" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E4FFFFFF">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/global_news"
                android:textSize="24sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:layout_gravity="center"/>

        </androidx.appcompat.widget.Toolbar>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/swipeRefresh"
            android:layout_below="@id/toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                android:id="@+id/desOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/top_headlines"
                android:textSize="24sp"
                android:textColor="#434141"
                android:textStyle="italic"
                android:fontFamily="monospace"/>

            <TextView
                android:id="@+id/desTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/of_the"
                android:textSize="24sp"
                android:textColor="#5E5C5C"
                android:textStyle="italic"
                android:fontFamily="monospace"
                android:layout_below="@id/desOne"/>

            <TextView
                android:id="@+id/desThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/day"
                android:textSize="24sp"
                android:textColor="#656464"
                android:textStyle="italic"
                android:fontFamily="monospace"
                android:layout_below="@id/desTwo"/>

            <androidx.viewpager2.widget.ViewPager2
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="40dp"
                android:layout_below="@id/desThree"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:id="@+id/globalView"/>

            </RelativeLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    </RelativeLayout>

</FrameLayout>