<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Detailed">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/detailImage"
            android:layout_width="match_parent"
            android:layout_height="400dp">

            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:id="@+id/webViewLoader"/>

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/global_news"
                android:scaleType="centerCrop"
                android:contentDescription="@string/app_name"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/news_gradient"
                android:contentDescription="@string/app_name"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_gravity="bottom">

                <TextView
                    android:id="@+id/tvSource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/source"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:gravity="end"/>

            </LinearLayout>

        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp"
            android:layout_below="@id/detailImage">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="10dp"/>

                <TextView
                    android:id="@+id/tvDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:padding="10dp"/>

                <WebView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:id="@+id/webView"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</ScrollView>